--- a/AugmentEPF/app/src/main/AndroidManifest.xml
+++ b/AugmentEPF/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".AugmentEPFApplication">
         <activity android:name=".HomePageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +21,7 @@
         <activity android:name=".PathConsultationActivity" />
         <activity android:name=".NavigationActivity" />
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".AdminActivity"></activity>
+        <activity android:name=".AdminActivity" />
     </application>
 
 </manifest>
