--- a/AugmentEPF/app/src/main/AndroidManifest.xml
+++ b/AugmentEPF/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.filiereticsa.arc.augmentepf.activities.HomePageActivity"
+        <activity
+            android:name=".activities.HomePageActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustNothing">
             <intent-filter>
@@ -26,13 +27,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.filiereticsa.arc.augmentepf.activities.PathPlanningActivity" />
-        <activity android:name="com.filiereticsa.arc.augmentepf.activities.PathConsultationActivity" />
-        <activity android:name="com.filiereticsa.arc.augmentepf.activities.ConnectionActivity" />
-        <activity android:name="com.filiereticsa.arc.augmentepf.activities.SettingsActivity" />
-        <activity android:name="com.filiereticsa.arc.augmentepf.activities.AdminActivity" />
-        <activity
-            android:name=".activities.CreateAccountActivity"/>
+        <activity android:name=".activities.PathPlanningActivity" />
+        <activity android:name=".activities.PathConsultationActivity" />
+        <activity android:name=".activities.ConnectionActivity" />
+        <activity android:name=".activities.SettingsActivity" />
+        <activity android:name=".activities.AdminActivity" />
+        <activity android:name=".activities.CreateAccountActivity" />
+        <activity android:name=".activities.CalendarActivity"></activity>
     </application>
 
 </manifest>
