--- a/AugmentEPF/app/src/main/AndroidManifest.xml
+++ b/AugmentEPF/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <activity android:name=".activities.SettingsActivity" />
         <activity android:name=".activities.AdminActivity" />
         <activity android:name=".activities.CreateAccountActivity" />
-        <activity android:name=".activities.AdminEditActivity"></activity>
+        <activity android:name=".activities.CalendarActivity"></activity>
     </application>
 
 </manifest>
